Bug fixes
Fixed a bug where images received via the google maps api broke the card due to their dimensions, fixed another bug where if a place had no reviews, the function rendering the stars would give an out of bounds exception, finally, fixed a bug where the first card was repeating itself

--- a/src/external_components/css/placeCard.css
+++ b/src/external_components/css/placeCard.css
@@ -6,5 +6,16 @@
 
 .card {
     max-width: 480px;
-    max-height: 570px;
+    max-height: 480px;
+}
+
+#card-image {
+    max-width: 480px;
+    max-height: 320px;
+}
+
+#action-buttons {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
 }
